// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoonIcon when asked to render matches snapshot 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
  />
</svg>
`;

exports[`MoonIcon when asked to render with additional class renders with additional class 1`] = `
<svg
  aria-hidden="true"
  className="some-class"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
  />
</svg>
`;
